Link landing page to live Vercel apps

--- a/apps/landing/index.html
+++ b/apps/landing/index.html
@@ -95,7 +95,7 @@
               <li>Class and house filters</li>
               <li>Daily shout-outs</li>
             </ul>
-            <a class="link" href="#">Launch Leaderboard</a>
+            <a class="link" href="https://bhaleagueofstars-leaderboard.vercel.app">Launch Leaderboard</a>
           </article>
           <article class="app-card reveal" style="animation-delay: 0.3s;">
             <h3>Student, Parent, Staff</h3>
@@ -108,7 +108,7 @@
               <li>Track badges</li>
               <li>Personal dashboards</li>
             </ul>
-            <a class="link" href="#">Launch Portal</a>
+            <a class="link" href="https://bhaleagueofstars-portal.vercel.app">Launch Portal</a>
           </article>
           <article class="app-card reveal" style="animation-delay: 0.4s;">
             <h3>Admin Console</h3>
@@ -120,7 +120,7 @@
               <li>Program settings</li>
               <li>Data exports</li>
             </ul>
-            <a class="link" href="#">Launch Admin</a>
+            <a class="link" href="https://bhaleagueofstars-admin.vercel.app">Launch Admin</a>
           </article>
         </div>
       </section>
