--- a/apps/landing/index.html
+++ b/apps/landing/index.html
@@ -49,7 +49,7 @@
             culture that shines.
           </p>
           <div class="hero-actions reveal" style="animation-delay: 0.35s;">
-            <a class="btn primary" href="#apps">Go to apps</a>
+            <a class="btn primary" href="https://bhaleagueofstars-landingpage.vercel.app#apps">Go to apps</a>
             <a class="btn ghost" href="#vision">Our vision</a>
           </div>
         </div>
