Update vision pillars to 3 Rs

--- a/apps/landing/index.html
+++ b/apps/landing/index.html
@@ -144,16 +144,16 @@
           <div class="vision-panel reveal" style="animation-delay: 0.3s;">
             <h3>Vision pillars</h3>
             <div class="pillar">
-              <strong>Belonging</strong>
-              <p>Every member feels seen, supported, and celebrated.</p>
+              <strong>Respect</strong>
+              <p>Choosing kindness, dignity, and care in every interaction.</p>
             </div>
             <div class="pillar">
-              <strong>Growth</strong>
-              <p>Points highlight daily progress, not just big wins.</p>
+              <strong>Responsibility</strong>
+              <p>Owning our actions and showing up for our community.</p>
             </div>
             <div class="pillar">
-              <strong>Impact</strong>
-              <p>Dashboards help staff spot trends and act quickly.</p>
+              <strong>Righteousness</strong>
+              <p>Leading with integrity and doing what is right.</p>
             </div>
           </div>
         </div>
